--- a/404.html
+++ b/404.html
@@ -22,6 +22,9 @@
       // https://username.github.io/repo-name/one/two?a=b&c=d#qwe becomes
       // https://username.github.io/repo-name/?/one/two&a=b~and~c=d#qwe
       // Otherwise, leave pathSegmentsToKeep as 0.
+      
+      // 0 = atul22g.me
+      // 1 = atul22g.me/repo
       var pathSegmentsToKeep = 0;
 
       var l = window.location;
